corrected previous errors. Removed picture. Fixed horizontal scroll. Removing/adding things after changes done. Fixing width, margins etc and media-queries

--- a/code/style.css
+++ b/code/style.css
@@ -12,32 +12,30 @@ html {
   /* added this font-size when watching tutorial on accordion, because he used the rem-unit for font-size which I think sets the fonts relative to the size specified in the body. */
   font-size: 1rem;
 }
-
+/* To codereviewer: there is some horizontal scroll that I don't know how to get rid of. I have tried to put ovwrflow-x: hidden on the body and the scroll disappears, but the content isn't centered. I've also tried to put vw to 100 and check on different elements if it makes any difference but it doesn't. I haven't figured out how to solve this entirely.*/
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
   background-color: #fff;
+  overflow-x: hidden;
 }
                                           /* HEADER NAVBAR STARTS HERE */
 header {
   position: fixed;
-  /* for some reason the header doesn't center when I look at in in the inspector. But when I changed to 99vw it worked. But without inspector it looks good. Why? */
+  /* for some reason the header (or the whole page) doesn't center when I look at in in the inspector. But when I tride to change to 99vw instead of 100vw on the header it centered. Why?*/
   width: 100vw;
   background: rgba(73, 88, 103, 0.8);
   padding: 6px 24px;
   color: white;
   letter-spacing: 1px;
-  z-index: 9; /* same as for navbar: not sure if I should have z-index here or not*/
-}
+  z-index: 9; 
+  }
 
 header .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 70px;
-  /* position: sticky; Not sure if I should use this as I have position fixed on the header: 
-  I didn't get position sticky to work. The header lost ist transparent colour when I set it to position sticky, 
-  and even though I put a negative top margin on the hero container, and z-index 10 on the header it didn't work.*/
   top: 0px;
   margin: 0px;
   overflow: hidden;
@@ -72,11 +70,8 @@ header .navbar {
   height: 5px;
   background-color: #E7AD99;
   border-radius: 5px;
-
 }
-
                           /* HERO CONTAINER STARTS HERE */
-
 hero-container {
   /* display: flex; only @ (min-width: 660px)*/
   /* flex-direction: column; only @ (min-width: 660px)*/
@@ -88,10 +83,8 @@ hero-container {
   /* overflow: hidden; */
   height: 80vh;
   width: 100vw;
-  background-size: cover;
-  background-position: center center;
-  /* thw background below don't show - maybe remove? */
-  background: linear-gradient(90deg, #833ab4 0%, #75adc0 50%, #fcb045 100%);
+  /* background-size: cover;
+  background-position: center center; */
 }
 
 .hero-content {
@@ -142,7 +135,6 @@ hero-container {
   width: 100vw;
   height: 100%;
   z-index: 1;
-  /* overflow: hidden; */
   object-fit: cover;
   object-position: top center;
 }
@@ -152,24 +144,20 @@ hero-container {
 }
                                 /* INTRO-SECTION STARTS HERE */
 
-.accordion-section {
-  display: flex;
-  flex-direction: row;
-  
-}
-
-.intro-wrapper {
+/* .intro-wrapper {
   margin: 2.5rem;
-}
+} */
 
 .intro-section {
+  margin: 2.5rem;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
-.intro-heading {
+/* .intro-heading {
   align-self: center;
-}
+} */
 
 .intro-heading h2 {
   margin-bottom: 1.2rem;
@@ -182,6 +170,7 @@ hero-container {
 
 .introtext {
   display: flex;
+  justify-content: center;
 }
 
 .introtext p {
@@ -189,7 +178,7 @@ hero-container {
   font-weight: 500;
   font-size: 14px;
   color: #495867;
-  width: 33%;
+  width: 29%;
   margin-right: 1.2rem;
 }
 
@@ -197,21 +186,26 @@ hero-container {
   margin-right: 0;
 }
                                   /* ACCORDION STARTS HERE */
+/* .accordion-section {
+  display: flex;
+  flex-direction: row;
+} */
+
 .accordion-section {
-  width: 100vw;
+  /* width: 100vw; */
   display: flex;
   justify-content: center;
   margin-bottom: 2.5rem;
   align-items: flex-start;
 }
 
-.accordion-wrapper {
+/* .accordion-wrapper {
   width: 60vw;
-}
+} */
 
 .accordion-header {
   width: 90%;
-  font-size: 1.5rem;
+  font-size: 24px;
   color: #495867;
   text-align: center;
   font-weight: 700;
@@ -219,11 +213,14 @@ hero-container {
   margin: auto;
 }
 
+.accordion-wrapper {
+  width: 90vw;
+}
+
 .accordion {
-  width: 90%;
-  /* max-width: 1000px; */
-  /* margin auto on the sides as to center the FAQ */
-  margin: 2rem 3rem;
+  /* width: 90%; */
+  max-width: 1000px;
+  margin: auto;
 }
 
 .accordion-item {
@@ -260,7 +257,6 @@ hero-container {
 /* Add the symbol with help of the ::after pseudo-element. Using :: to distinguish between pseudo-elements and pseudo-classes */
 
 .accordion-item-header::after {
-  /* CSS entity-code for plus-sign below */
   content: "\002B";
   color: #495867;
   font-size: 2rem;
@@ -278,7 +274,6 @@ hero-container {
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.3s ease-out;
-  /* background-color: #C18C5D; */
   background-color: #495867;
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
@@ -288,9 +283,11 @@ hero-container {
   padding: 1rem;
   line-height: 1.5rem;
   color: #fff;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
 }
 
-.accordion-picture {
+/* .accordion-picture {
   width: 30vw;
   margin: 4.5rem 0 0 2rem;
   display: flex;
@@ -301,7 +298,7 @@ hero-container {
   width: 70%;
   border-radius: 1rem;
   box-shadow: 0 5px 8px 0 rgba(0,0,0,0.35);
-}
+} */
                                                         /* FORM STARTS HERE */
 .form-container {
   display: flex;
@@ -313,10 +310,11 @@ hero-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 80vw;
   /* justify-content: center; */    
   background: radial-gradient(circle, #ECC8AF 0%, #C18C5D 100%);
   padding: 0;
-  max-width: 500px;
+  max-width: 800px;
   border-radius: 1rem;
   box-shadow: 0 5px 8px 0 rgba(0,0,0,0.35);
 }
@@ -431,8 +429,6 @@ hero-container {
 }
 
 .form-submit-button {
-  /* width: 150px;
-  color: #495867; */
   background-color: #495867;
   color: #E7AD99;
   padding: 8px 18px;
@@ -463,14 +459,14 @@ hero-container {
     width: 100%;
   }
 
-  .accordion {
+  /* .accordion {
     margin: 0;
     width: 100%;
-  }
+  } */
 
-  .accordion-picture {
+  /* .accordion-picture {
     display: none;
-  }
+  } */
 
   .form {
     width: 60vw;
@@ -483,29 +479,34 @@ hero-container {
     padding: 0;
   }
 
+  header .navbar {
+    justify-content: space-around;
+  }
   .navbar h2 {
-    margin: 0 15px;
-    font-size: 20px;
+    margin: 0 10px;
+    font-size: 18px;
   }
 
   .hamburger {
-    margin-right: 8px;
+    margin-right: 5px;
   }
 
   .navbar img {
-    margin-left: 8px;
+    margin-left: 5px;
   }
 
   .hero-content {
-    padding: 100px 0 0 0;
+    padding-top: 105px;
+    height: 70vh;
+    /* padding: 100px 0 0 0; */
   }
 
   .hero-box {
-    margin: 90px 40px 0 40px;
+    /* margin: 90px 40px 0 40px; */
   }
 
   .hero-headline {
-    font-size: 48px;
+    font-size: 36px;
   }
 
   .hero-video-playing {
@@ -519,12 +520,16 @@ hero-container {
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 2;
+    /* overflow: hidden; */
     object-fit: cover;
     object-position: top center;
-    z-index: 2;
-    overflow: hidden;
+  }
+
+  .hero-picture img {
+    width: 100%;
     object-fit: cover;
-    object-position: center center;
+    object-position: top center;
   }
 
   .introtext {
@@ -537,14 +542,23 @@ hero-container {
     margin: 5px 0;
   }
 
+  .accordion-wrapper {
+    width: 95vw;
+  }
+
+  .form {
+    width: 95vw;
+    max-width: none;
+  }
+
   @media (max-width:552px) {
-    .accordion-wrapper {
+    /* .accordion-wrapper {
       width: 95vw;
-    }
-    .form {
+    } */
+    /* .form {
       width: 95vw;
       max-width: none;
-    }
+    } */
   }
 
 }
